grammar.js
        source_file: ($) => repeat($._declaration),

        // `#` is a line comment EXCEPT when immediately followed by `[` (a decorator)
        comment: ($) => token(/#([^\[\r\n][^\r\n]*)?/),

        // bracket decorator: #[name] or #[name(args)]; attaches to the following decl
        _declaration: ($) =>
            choice(
                $.use_declaration,
                $.forward_declaration,
                $.type_alias_declaration,
                $.record_declaration,
                $.union_declaration,
                $.tag_declaration,
                $.value_declaration,
                $.variable_declaration,
                $.function_declaration,
                $.test_declaration,
                $.comptime_if_declaration,
                $.comptime_expression_statement,
            ),

        // pub / ext visibility and linkage flags, any order, zero or more
        value_declaration: ($) =>
            seq(repeat($.decorator), optional($.modifiers), $._value_binding),

        // [`decorator`...] [flags] var name [: type] [= expr];
        _value_binding: ($) =>
            seq(
                "val",
                field("name", $.identifier),
                optional(seq(":", field("type", $._type))),
                optional(seq("=", field("value", $._expression))),
                ";",
            ),

        function_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "fun",
                field("name", $.identifier),
                optional($.type_parameters),
                $.parameter_list,
                optional(field("return_type", $._type)),
                choice($.block, ";"),
            ),

        parameter_list: ($) =>
            seq(
                "(",
                optional(
                    choice(
                        // C-style variadic only: fun f(...)
                        $.variadic_parameter,
                        // comptime pack only: fun f(va: ...)
                        $.pack_parameter,
                        seq(
                            sep1($.parameter, ","),
                            optional(
                                seq(
                                    ",",
                                    // trailing C-style ... or named pack va: ...
                                    optional(choice($.variadic_parameter, $.pack_parameter)),
                                ),
                            ),
                        ),
                    ),
                ),
                ")",
            ),

        // a leading `$` marks a comptime value parameter
        comptime_expression: ($) =>
            seq(
                "$",
                choice(
                    // $size_of(*T), $fields(T), $offset_of(T, field): the first
                    // operand of these intrinsics is a type, so `*T`, `[N]T`,
                    // `^T` and `Name[T]` read as types rather than expressions
                    seq(
                        field("name", alias(TYPE_OPERAND_INTRINSIC, $.identifier)),
                        "(",
                        field("type", $._type),
                        repeat(seq(",", $._expression)),
                        optional(","),
                        ")",
                    ),
                    // $error("msg"), $type_of(e), $assert(cond, "msg")
                    seq(
                        field("name", $.identifier),
                        "(",
                        optional(seq(sep1($._expression, ","), optional(","))),
                        ")",
                    ),
                    // $mach.build.os, $project.version, $bin.name  (bare comptime path)
                    $.comptime_field_path,
                ),
            ),

        block: ($) => seq("{", repeat($._statement), "}"),

        _statement: ($) =>
            choice(
                alias($.local_value_declaration, $.value_declaration),
                alias($.local_variable_declaration, $.variable_declaration),
                $.if_statement,
                $.for_statement,
                $.return_statement,
                $.break_statement,
                $.continue_statement,
                $.defer_statement,
                $.asm_statement,
                $.comptime_if_statement,
                $.comptime_each_statement,
                $.comptime_expression_statement,
                $.block,
                $.expression_statement,
            ),

        return_statement: ($) => seq("ret", optional($._expression), ";"),

        // `brk;` and `cnt;` are statements only when followed by `;`; the
        // precedence takes the keyword over an identifier named brk or cnt
        _expression: ($) =>
            choice(
                $.assignment_expression,
                $.binary_expression,
                $.unary_expression,
                $.sel_expression,
                $.cast_expression,
                $.secret_strip_expression,
                $.typed_literal,
                $.tag_literal,
                $.array_literal,
                $.record_literal,
                $.union_literal,
                $.comptime_expression,
                $._postfix_expression,
            ),

        // call, index, field access, projection, and pack spread form a single
        // left-recursive chain so the LR parser keeps `[ ( . .[` as valid shifts.
        typed_literal: ($) =>
            prec.dynamic(
                1,
                seq(
                    field("type", choice($.type_identifier, $.generic_type)),
                    $.initializer_list,
                ),
            ),

        // Type.case{...}, Type[T].case{...}, or T.[descriptor]{...}
        tag_literal: ($) =>
            prec.dynamic(
                0,
                seq(
                    field("type", choice($.type_identifier, $.generic_type)),
                    ".",
                    choice(
                        field("case", $.identifier),
                        seq("[", field("case_descriptor", $._expression), "]"),
                    ),
                    $.initializer_list,
                ),
            ),

        // [N]Type{ values }
        initializer_list: ($) =>
            seq(
                "{",
                optional(sep1($.initializer_field, ",")),
                optional(","),
                "}",
            ),

        initializer_field: ($) =>
            choice(
                seq(
                    field("name", choice($.identifier, $._keyword_identifier)),
                    ":",
                    field("value", $._expression),
                ),
                field("value", $._expression),
            ),

        nil_literal: ($) => "nil",

        // the compiler lexes every keyword as an identifier and recognises it
        // by position; these are the ones also valid at the start of an
        // expression or statement, where the keyword reading would otherwise
        // win. the negative dynamic precedence yields to `rec {`, `cnt;`, ...
        _keyword_identifier: ($) =>
            prec.dynamic(
                -1,
                alias(choice("rec", "uni", "sel", "brk", "cnt"), $.identifier),
            ),

        _type: ($) =>
            choice(
                $.primitive_type,
                $.secret_type,
                $.pointer_type,
                $.array_type,
                $.function_type,
                $.generic_type,
                $.record_type,
                $.union_type,
                $.comptime_type,
                $.type_identifier,
            ),

        // $pointee_of(T) / $discriminant_of(T) — comptime type constructors;
        // dynamic precedence favours the type reading over an index expression
        // holding an intrinsic call when both are live after `identifier [`
        primitive_type: ($) =>
            choice(
                "u8",
                "u16",
                "u32",
                "u64",
                "i8",
                "i16",
                "i32",
                "i64",
                "f32",
                "f64",
                "ptr",
            ),

        // ^type marks the value carried by a type as secret
        secret_type: ($) =>
            prec.right(
                seq(
                    field("marker", "^"),
                    field("type", $._type),
                ),
            ),

        // *type (nesting **type falls out of the recursion)
        pointer_type: ($) => prec.left(seq("*", $._type)),

        // [N]type
        array_type: ($) =>
            prec.left(
                seq(
                    "[",
                    field("size", $._expression),
                    "]",
                    field("element", $._type),
                ),
            ),

        // fun(types) [return_type]; parameters are bare types, a trailing
        // `...` marks a C-variadic signature
        generic_type: ($) =>
            seq(
                field("name", choice($.identifier, $.type_identifier)),
                "[",
                sep1($._type, ","),
                optional(","),
                "]",
            ),

        // anonymous rec { ... } used as a type
        type_identifier: ($) => sep1($.identifier, "."),

        // 42, 0xFF, 0b1010, 0o77, 1_000_000, 42i64, 0xFFu32
        integer_literal: ($) =>
            token(
                choice(
                    seq(
                        "0",
                        choice("x", "X"),
                        /[0-9a-fA-F][0-9a-fA-F_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(
                        "0",
                        choice("b", "B"),
                        /[01][01_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(
                        "0",
                        choice("o", "O"),
                        /[0-7][0-7_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(/[0-9][0-9_]*/, optional(INT_SUFFIX)),
                ),
            ),

        // 3.14, 1.0, 0.5e10, 1.5E-3, 1e0f32, 3.14f64; a fraction or an
        // exponent makes it a float
        float_literal: ($) =>
            token(
                seq(
                    /[0-9][0-9_]*/,
                    choice(
                        seq(
                            ".",
                            /[0-9][0-9_]*/,
                            optional(seq(/[eE]/, optional(/[+-]/), /[0-9][0-9_]*/)),
                        ),
                        seq(/[eE]/, optional(/[+-]/), /[0-9][0-9_]*/),
                    ),
                    optional(FLOAT_SUFFIX),
                ),
            ),

        // 'c' with escapes \n \t \r \\ \' \0 \xNN
        char_literal: ($) =>
            token(
                seq(
                    "'",
                    choice(
                        /\\['"\\ntr0]/,
                        /\\x[0-9a-fA-F]{2}/,
                        /[^'\\]/,
                    ),
                    "'",
                ),
            ),

        // "..." with escapes \n \t \r \\ \' \" \0 \xNN; may span lines
        string_literal: ($) =>
            token(
                seq(
                    '"',
                    repeat(
                        choice(
                            /\\['"\\ntr0]/,
                            /\\x[0-9a-fA-F]{2}/,
                            /[^"\\]/,
                        ),
                    ),
                    '"',
                ),
            ),

        identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    },
});

// Comma-separated list of one or more items.
function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
