test/corpus/literals.txt
================================================================================
integer: simple decimal
================================================================================

val x: i64 = 42;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: zero
================================================================================

val x: i64 = 0;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: underscore separators
================================================================================

val x: i64 = 1_000_000;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: hexadecimal
================================================================================

val x: i64 = 0xFF;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: hexadecimal uppercase prefix
================================================================================

val x: i64 = 0XAB;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: hex with underscores
================================================================================

val x: i64 = 0xFF_FF;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: binary
================================================================================

val x: i64 = 0b1010;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: binary uppercase prefix
================================================================================

val x: i64 = 0B1100;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: binary with underscores
================================================================================

val x: i64 = 0b1111_0000;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: octal
================================================================================

val x: i64 = 0o77;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: octal uppercase prefix
================================================================================

val x: i64 = 0O77;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: type suffix i64
================================================================================

val x: i64 = 42i64;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: type suffix u8
================================================================================

val x: u8 = 255u8;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: type suffix u32
================================================================================

val x: u32 = 100u32;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: type suffix i8
================================================================================

val x: i8 = 127i8;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: hex with type suffix
================================================================================

val x: u32 = 0xFFu32;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: binary with type suffix
================================================================================

val x: u8 = 0b1010u8;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
integer: octal with type suffix
================================================================================

val x: i32 = 0o77i32;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
float: simple
================================================================================

val x: f64 = 3.14;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: zero point zero
================================================================================

val x: f64 = 0.0;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: with underscores
================================================================================

val x: f64 = 1_000.5_0;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: type suffix f64
================================================================================

val x: f64 = 3.5f64;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: type suffix f32
================================================================================

val x: f32 = 1.0f32;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: exponent lowercase
================================================================================

val x: f64 = 1.5e10;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: exponent uppercase
================================================================================

val x: f64 = 1.5E10;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: exponent with negative sign
================================================================================

val x: f64 = 1.5e-3;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: exponent with positive sign
================================================================================

val x: f64 = 2.0E+5;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
float: exponent with type suffix
================================================================================

val x: f64 = 1.0e2f64;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal)))

================================================================================
char: simple character
================================================================================

val c: u8 = 'a';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
char: digit character
================================================================================

val c: u8 = '0';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
char: escape newline
================================================================================

val c: u8 = '\n';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
char: escape tab
================================================================================

val c: u8 = '\t';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
char: escape backslash
================================================================================

val c: u8 = '\\';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
char: escape single quote
================================================================================

val c: u8 = '\'';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
char: escape null
================================================================================

val c: u8 = '\0';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
char: escape carriage return
================================================================================

val c: u8 = '\r';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
char: hex escape
================================================================================

val c: u8 = '\x41';

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (char_literal)))

================================================================================
string: simple string
================================================================================

val s: str = "hello";

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (string_literal)))

================================================================================
string: empty string
================================================================================

val s: str = "";

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (string_literal)))

================================================================================
string: with escape sequences
================================================================================

val s: str = "hello\nworld\t!";

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (string_literal)))

================================================================================
string: with hex escape
================================================================================

val s: str = "null\x00byte";

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (string_literal)))

================================================================================
string: escaped quotes
================================================================================

val s: str = "say \"hi\"";

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (string_literal)))

================================================================================
string: escaped backslash
================================================================================

val s: str = "path\\to\\file";

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (string_literal)))

================================================================================
nil: nil literal
================================================================================

val p: ptr = nil;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (nil_literal)))

================================================================================
comment: single line comment
================================================================================

# this is a comment
val x: i64 = 1;

--------------------------------------------------------------------------------

(source_file
  (comment)
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
comment: inline comment after code
================================================================================

val x: i64 = 1; # trailing comment

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal))
  (comment))

================================================================================
tag literal: generic head with payload
================================================================================

val r: res[u32, Fail] = res[u32, Fail].ok{42};

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (generic_type
      name: (identifier)
      (primitive_type)
      (type_identifier
        (identifier)))
    value: (tag_literal
      type: (generic_type
        name: (identifier)
        (primitive_type)
        (type_identifier
          (identifier)))
      case: (identifier)
      (initializer_list
        (initializer_field
          value: (integer_literal))))))

================================================================================
tag literal: generic head without payload
================================================================================

val o: opt[str] = opt[str].none{};

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (generic_type
      name: (identifier)
      (type_identifier
        (identifier)))
    value: (tag_literal
      type: (generic_type
        name: (identifier)
        (type_identifier
          (identifier)))
      case: (identifier)
      (initializer_list))))

================================================================================
tag literal: qualified generic head
================================================================================

fun f() { ret std.res[u32, Fail].err{failure}; }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list)
    (block
      (return_statement
        (tag_literal
          type: (generic_type
            name: (type_identifier
              (identifier)
              (identifier))
            (primitive_type)
            (type_identifier
              (identifier)))
          case: (identifier)
          (initializer_list
            (initializer_field
              value: (identifier))))))))

================================================================================
tag literal: plain dotted head is one type path
================================================================================

val c: Color = Color.red{};

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (typed_literal
      type: (type_identifier
        (identifier)
        (identifier))
      (initializer_list))))

================================================================================
tag literal: case descriptor head
================================================================================

val v: T = T.[c]{payload};

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (tag_literal
      type: (type_identifier
        (identifier))
      case_descriptor: (identifier)
      (initializer_list
        (initializer_field
          value: (identifier))))))

================================================================================
float literal: exponent without a fraction
================================================================================

val a: f32 = 1e0f32;
val b: f64 = 2E-3;
val c: u64 = 7u64;

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal))
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (float_literal))
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (integer_literal)))

================================================================================
comptime: type operand forms on reflection intrinsics
================================================================================

val a: usize = $size_of(*Point);
val b: usize = $length_of([4]u8);
val c: bool = $is_secret(^u32);
val d: usize = $offset_of(Pair, second);
val e: u64 = $type_id(*Point);

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (comptime_expression
      name: (identifier)
      type: (pointer_type
        (type_identifier
          (identifier)))))
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (comptime_expression
      name: (identifier)
      type: (array_type
        size: (integer_literal)
        element: (primitive_type))))
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (comptime_expression
      name: (identifier)
      type: (secret_type
        type: (primitive_type))))
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (comptime_expression
      name: (identifier)
      type: (type_identifier
        (identifier))
      (identifier)))
  (value_declaration
    name: (identifier)
    type: (primitive_type)
    value: (comptime_expression
      name: (identifier)
      type: (pointer_type
        (type_identifier
          (identifier))))))

================================================================================
comptime: numeric shape predicates take a type operand
================================================================================

val a: bool = $is_integer(*T);
val b: bool = $is_integer(^u32);
val c: bool = $is_float([4]T);
val d: bool = $is_float(f32);

--------------------------------------------------------------------------------

(source_file
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (comptime_expression
      name: (identifier)
      type: (pointer_type
        (type_identifier
          (identifier)))))
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (comptime_expression
      name: (identifier)
      type: (secret_type
        type: (primitive_type))))
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (comptime_expression
      name: (identifier)
      type: (array_type
        size: (integer_literal)
        element: (type_identifier
          (identifier)))))
  (value_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (comptime_expression
      name: (identifier)
      type: (primitive_type))))
